feat: add new api endpoint POST /api/testers
